--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel index.js --presets es2015 | node"
+    "server": "babel-node index.js --presets es2015",
+    "start": "npm run build && npm run server"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,9 @@
   },
   "dependencies": {
     "express": "^4.13.3",
+    "jquery": "^2.1.4",
     "react": "^0.14.3",
+    "react-addons-css-transition-group": "^0.14.5",
     "react-dom": "^0.14.3",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
